fixed overflowing winner

--- a/src/static/styles/Tournament.css
+++ b/src/static/styles/Tournament.css
@@ -77,6 +77,7 @@
 
 .winner {
     width: 100%;
+    display: flex;
     border-bottom: 1px solid black;
 }
 
